--- a/manifests/rolebinding.yaml
+++ b/manifests/rolebinding.yaml
@@ -9,7 +9,7 @@ subjects:
 # You can specify more than one "subject"
 - kind: ServiceAccount
   name: openshift-gitops-argocd-application-controller
-  apiGroup: rbac.authorization.k8s.io
+  namespace: openshift-gitops
 roleRef:
   # "roleRef" specifies the binding to a Role / ClusterRole
   kind: ClusterRole #this must be Role or ClusterRole
